# Tachyon

./: .clang-format  .clang-tidy  .gitignore  ABI.md  CHANGELOG  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTEGRATION.md  MIGRATION.md  Pipfile  README.md  SECURITY.md  SYSCALLS.md  tsan.supp
benchmark/: CMakeLists.txt  README.md
benchmark/src/: bench_inter.cpp  bench_intra.cpp  bench_zmq.cpp  main.cpp
bindings/: CMakeLists.txt
bindings/csharp/: README.md
bindings/csharp/.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
bindings/csharp/src/TachyonIpc/: Bus.cs  RpcBus.cs  RpcGuard.cs  RxBatchGuard.cs  RxGuard.cs  TachyonException.cs  TachyonIpc.csproj  TxGuard.cs  TypeId.cs
bindings/csharp/src/TachyonIpc/Native/: NativeLoader.cs  TachyonNative.cs
bindings/csharp/tests/TachyonIpc/: BusTests.cs  RpcTests.cs  TachyonIpc.Tests.csproj
bindings/go/: README.md  go.mod
bindings/go/tachyon/: batch.go  bench_test.go  bus.go  bus_std.go  cgo.go  error.go  rpc.go  rpc_test.go  rx_guard.go  star.go  star_test.go  tachyon_bridge.cpp  tachyon_bus_test.go  tachyon_state.go  tx_guard.go  type_id.go
bindings/java/: CMakeLists.txt  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
bindings/java/src/native/: tachyon_jni.cpp
bindings/js/: .mocharc.json  .npmignore  CMakeLists.txt  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
bindings/js/scripts/: copy-wasm.mjs
bindings/js/src/ts/: bus.ts  bus_core.ts  error.ts  guards.ts  type_id.ts
bindings/js/src/ts/wasm/: tachyon_ipc.d.ts  tachyon_ipc_bg.js  tachyon_ipc_bg.wasm.d.ts
bindings/js/test/: browser_wasm.spec.mjs
bindings/kotlin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
bindings/node/: .mocharc.json  .npmignore  .prettierignore  .prettierrc  CMakeLists.txt  README.md  binding.gyp  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
bindings/node/examples/: README.md  consumer.mjs  producer.mjs
bindings/node/scripts/: stamp-wasm-bindings.mjs
bindings/node/src/native/: tachyon_node.cpp
bindings/node/src/ts/: batch.ts  browser.ts  bus.ts  error.ts  guards.ts  index.ts  rpc.ts
bindings/node/src/ts/wasm/: tachyon_ipc.d.ts  tachyon_ipc.js  (+3 more)
bindings/node/test/: browser_wasm.spec.mjs  bus.spec.ts  rpc.spec.ts  rpc_worker.ts  worker.ts
bindings/python/: MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/python/benchmark/: bench_ipc.py
bindings/python/src/tachyon/: __init__.py  __init__.pyi  _tachyon.cpp  _tachyon.pyi  bus.py  message.py  rpc.py  rpc_decorator.py  type_id.py
bindings/python/tests/: test_bus.py  test_rpc.py
bindings/rust/: Cargo.toml
bindings/rust/tachyon/: Cargo.toml  README.md
bindings/rust/tachyon-sys/: Cargo.toml  README.md  build.rs
bindings/rust/tachyon-sys/src/: lib.rs
bindings/rust/tachyon/examples/: bench_ipc.rs
bindings/rust/tachyon/src/: bus.rs  error.rs  lib.rs  rpc.rs  star.rs  type_id.rs  wasm.rs
contrib/seccomp/: CMakeLists.txt  README.md  tachyon_full.bpf.c  tachyon_hotpath.bpf.c
core/: CMakeLists.txt  README.md
core/include/: tachyon.h  tachyon.hpp
core/include/tachyon/: arena.hpp  concepts.hpp  shm.hpp  signal.hpp  star.hpp  transport.hpp
core/src/: abi_utils.h  arena.cpp  bus_impl.h  shm.cpp  signal.cpp  star.cpp  tachyon_c.cpp  tachyon_rpc.cpp  tachyon_star.cpp  transport_uds.cpp
examples/cpp_producer_cpp_consumer/ping/: CMakeLists.txt
examples/cpp_producer_cpp_consumer/ping/src/: main.cpp
examples/cpp_producer_cpp_consumer/pong/: CMakeLists.txt
examples/cpp_producer_cpp_consumer/pong/src/: main.cpp
examples/cpp_producer_python_consumer/producer/: CMakeLists.txt
examples/cpp_producer_python_consumer/producer/src/: main.cpp
examples/rpc_cpp_cpp/pricer/: CMakeLists.txt
examples/rpc_cpp_cpp/pricer/src/: main.cpp
fuzz/: CMakeLists.txt  README.md
fuzz/corpus/arena_rpc/: seed_actual_gt_max  seed_cid_uint64_max  seed_cid_zero  seed_max_size_zero  seed_nominal_valid_cid  seed_rx_cid_offset_corrupt  seed_rx_pad_nonzero  seed_type_id_with_route
fuzz/corpus/arena_rx/: seed_head_batch_boundary  seed_reserved_capacity  seed_reserved_zero  seed_typeid_route0_msgtype1  seed_typeid_route0_msgtype_max  seed_typeid_route1_msgtype0  seed_typeid_route1_msgtype1  seed_typeid_route1_msgtype_max  seed_typeid_route_max_msgtype0  seed_typeid_typeid_all_ones  seed_valid_minimal
fuzz/corpus/arena_rx_batch/: seed_batch_31  seed_batch_32  seed_batch_33  seed_batch_mixed_size  seed_batch_skip_last  seed_head_one  seed_payload_max  seed_reserved_unaligned  seed_skip_marker
fuzz/corpus/arena_tx/: seed_actual_gt_max  seed_arena_full  seed_batch_boundary  seed_max_size_overflow  seed_max_size_zero  seed_nominal_commit  seed_nominal_rollback  seed_tail_ahead_of_head  seed_tail_arbitrary  seed_tail_misaligned  seed_tail_uint64_max
fuzz/corpus/header_parser/: seed_payload_max  seed_reserved_unaligned  seed_route0_msgtype1  seed_route0_msgtype_max  seed_route1_msgtype0  seed_route1_msgtype1  seed_route1_msgtype_max  seed_route_max_msgtype0  seed_size_max_reserved64  seed_typeid_all_ones  seed_valid_minimal
fuzz/corpus/shm_attach/: seed_bad_alignment  seed_bad_magic  seed_bad_version  seed_capacity_exceeds_span  seed_capacity_not_pow2  seed_capacity_one  seed_capacity_zero  seed_span_too_small  seed_state_fatal  seed_valid_4096
fuzz/corpus/toctou/: seed_misaligned_127  seed_misaligned_129  seed_reserved_at_capacity  seed_reserved_exceeds_capacity  seed_skip_in_reserved  seed_underflow_reserved_63  seed_underflow_reserved_one  seed_underflow_size_max  seed_underflow_size_max_reserved63  seed_valid_reserved_128_size_64
fuzz/dict/: tachyon.dict
fuzz/src/: fuzz_arena_rpc.cpp  fuzz_arena_rx.cpp  fuzz_arena_rx_batch.cpp  fuzz_arena_tx.cpp  fuzz_header_parser.cpp  fuzz_shm_attach.cpp  fuzz_star.cpp  fuzz_toctou.cpp
test/: CMakeLists.txt
test/src/: test_arena.cpp  test_rpc.cpp  test_shm.cpp  test_star.cpp
tools/tachyon-top/: CMakeLists.txt  README.md
tools/tachyon-top/src/: bus_view.hpp  main.cpp  proc_scanner.hpp  ui.hpp
(+136 files in other folders)
