[package]
name = "tachyon-sys"
version = "0.5.1"
edition = "2024"
links = "tachyon"
description = "Low-level FFI bindings for the Tachyon IPC C core"
license = "Apache-2.0"
repository = "https://github.com/riyaneel/tachyon"
readme = "README.md"
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    "vendor/core/include/**/*",
    "vendor/core/src/**/*",
]

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.57"

[dependencies]
libc = "0.2.183"
