[package]
name = "tachyon-ipc"
version = "0.5.1"
edition = "2024"
description = "Bare-metal lock-free IPC, SPSC ring buffer over POSIX shared memory"
license = "Apache-2.0"
repository = "https://github.com/riyaneel/tachyon"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tachyon-sys = { version = "0.5.1", path = "../tachyon-sys" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.release.build-override]
opt-level = 3
